// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Empty > renders with actions correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="flex flex-wrap items-center justify-center gap-x-2 gap-y-3"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"><span class="iconify i-lucide:plus shrink-0 size-5" aria-hidden="true"></span><span class="truncate">Add</span>
        <!--v-if-->
      </button></div>
  </div>
</div>"
`;

exports[`Empty > renders with actions slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="flex flex-wrap items-center justify-center gap-x-2 gap-y-3">Actions slot</div>
  </div>
</div>"
`;

exports[`Empty > renders with as correctly 1`] = `
"<section class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`Empty > renders with bottom slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>Bottom slot
</div>"
`;

exports[`Empty > renders with class correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with default slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <div class="mx-auto">Default slot</div>
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with description correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <div class="text-base text-balance text-toned">Description</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with description slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <div class="text-base text-balance text-toned">Description slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with icon correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <div class="mx-auto"><span class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-elevated text-base size-14"><span class="iconify i-lucide:file text-muted shrink-0 size-8" aria-hidden="true"></span></span></div>
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with title correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <h2 class="text-2xl font-pretty font-bold text-highlighted tracking-tight">Title</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with title slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <h2 class="text-2xl font-pretty font-bold text-highlighted tracking-tight">Title slot</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with top slot correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">Top slot<div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Empty > renders with ui correctly 1`] = `
"<div class="relative isolate w-full rounded-lg space-y-8 p-4 sm:p-6 bg-elevated/50 ring ring-default">
  <div class="flex flex-col items-center gap-6">
    <!--v-if-->
    <div class="max-w-sm flex flex-col items-center gap-y-2 text-center">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
